# environment-helpers

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
environment_helpers/: __init__.py  build.py  install.py  introspect.py
environment_helpers/_scripts/: call.py  launcher-kind.py  scheme.py  system-scheme.py  version.py
tests/: conftest.py  test_build.py  test_init.py  test_install.py
tests/helpers/: introspect.py
