[build-system]
requires = ['flit-core >= 3.4']
build-backend = 'flit_core.buildapi'

[project]
name = 'environment-helpers'
version = '0.0.1'
description = 'Collection of helpers for managing Python environments'
readme = 'README.md'
requires-python = '>= 3.8'
license.file = 'LICENSE'
authors = [
  { name = 'Filipe Laíns', email = 'lains@riseup.net' },
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
urls.homepage = 'https://github.com/FFY00/environment-helpers'
urls.changelog = 'https://environment-helpers.readthedocs.io/en/stable/changelog.html'

dependencies = [
  'build >= 0.5.0',
  'installer >= 0.5.0',
]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
files = 'src'
strict = true
show-error-codes = true
python-version = '3.8'

[tool.ruff]
src = ['src']
line-length = 100

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = [
  'W',    # pycodestyle
  'C90',  # mccabe
  'I',    # isort
  'UP',   # pyupgrade
  'YTT',  # flake8-2020
  'B',    # flake8-bugbear
  'A',    # flake8-builtins
  'C4',   # flake8-comprehensions
  'T20',  # flake8-pyi
  'PT',   # flake8-pytest-style
  'PGH',  # pygrep-hooks
  'RUF',  # ruff
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
